@@ -7079,3 +7079,5 @@ v0.92.0.11:
     - Closes #5539.
   - Fix the default public town setting not being used.
   - Fix a typo in a lang key use, courtesy of Warriorrrr with PR #5540.
+  - Allow economy.new_expand.price_claim_townblock_refund to be negative, meaning towns will be charged money to unclaim land.
+    - Closes #3650.
